# Heaviside

./: .coverage  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COMPONENTS.md  CONTRIBUTING.md  LICENSE  PROJECT_SPEC.md  README.md  heaviside.spec  main.py  pyproject.toml  render_components.py  run-manual.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
app/: resources.py  update.py  version.py
app/canvas/: commands.py  drag.py  geometry.py  items.py  scene.py  style.py  svgsym.py  view.py  wiregeometry.py
app/codegen/: circuitikz.py
app/componenteditor/: __init__.py  __main__.py  baker.py  draft.py  renderer.py  window.py
app/components/: bake.py  custom.py  generate.py  library.py  model.py  registry.py  render.py  style.py
app/preview/: latex.py  mathrender.py  tools.py  worker.py
app/schematic/: io.py  model.py  reshape.py  validate.py
app/ui/: controlstyle.py  custom_component_dialog.py  documentsettings.py  mainwindow.py  palette.py  preferences.py  properties.py  sourcepanel.py  theme.py
assets/: icon.af  icon.icns
components/: _probe.py  add_digital.py  add_library.py  add_text_anchors.py  add_transformers.py  components.json  definitions.json  extract_doc_anchors.py  generate_components.py  generate_library.py  generation.toml  geometry.json  import_family.py  scrape_manual.py
docs/: ai-development.md  release-notes-macos-snippet.md  releasing.md
docs/images/: architecture.af
examples/: Boost Converter.hv  ESC Cell Model.hv  ESC.hv  LIB Pulse Model.hv  Porous Electrode Interface.hv  State-Space System.hv
examples/Battery Models/: ESC Cell Model.hv  ESC Cell Model.hv.bak  Half-Cell Dc Model.hv  (+6 more)
licenses/: OFL-1.1.txt  THIRD_PARTY_LICENSES.md
packaging/: dmg_settings.py  entitlements.plist  heaviside-mime.xml  heaviside.appdata.xml  heaviside.desktop  heaviside.iss
scripts/: build.py  build_app.sh  make_appimage.py  make_dmg.py  make_dmg_background.py  make_icns.sh  make_ico.py  make_icons.py  make_installer.py  render_screenshots.py  sign_macos.py
spec/: README.md  component-editor.md  component-pipeline.md
tests/: conftest.py  test_bake.py  test_codegen.py  test_commands.py  test_componenteditor.py  test_components_library.py  test_controlstyle.py  test_custom.py  test_drag_parity.py  test_examples.py  test_generate.py  test_generated_library.py  test_geometry.py  test_io.py  test_items_stroke.py  test_latex_security.py  test_mainwindow.py  test_mathrender.py  test_model.py  test_node_resize.py  test_packaging.py  test_palette.py  test_preferences.py  test_preview_render.py  test_properties.py  test_registry.py  test_render.py  test_scene.py  test_screenshots.py  test_sourcepanel.py  test_svgsym.py  test_theme.py  test_tools.py  test_transforms.py  test_update.py  test_validate.py  test_version.py  test_welcome.py  test_wiregeometry.py  test_worker.py
tools/: export_circuitikz_svgs.py  export_circuitikz_svgs.sh  generate_components.py
(+9 files in other folders)
