[project]
name = "heaviside"
version = "0.3.0"
description = "Graphical editor for CircuiTikZ circuit diagrams"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.5",
    "pydantic>=2.0",
    "qtawesome>=1.4.2",
    "ziamath>=0.13",
]

[project.scripts]
heaviside = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# The importable code is the `app` package plus the top-level `main` module that
# the console script (`heaviside = main:main`) targets. Everything else at the
# repo root (tests, examples, docs, the PyInstaller spec) is not part of the
# package and is deliberately excluded.
packages = ["app"]
include = ["main.py"]
# uv installs the project itself in editable mode. Point the editable install at
# the repo ROOT so BOTH `app` and the top-level `main` module import, and
# app/resources.py keeps resolving bundled data relative to the checkout
# (resource_path walks app/ -> parents[1] == repo root).
dev-mode-dirs = ["."]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-qt>=4.2",
    "pytest-cov>=4.0",
    "pyinstaller>=6.21.0",
    "pillow>=12.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"
markers = [
    "slow: a slow test, skipped unless --run-slow is passed (see tests/conftest.py)",
]

[tool.coverage.run]
omit = [
    "app/ui/*",
    "app/canvas/scene.py",
    "app/canvas/view.py",
    "app/canvas/items.py",
]
